tests/cases/negative/scope/dupDefs3.lam
-- we attempt to define the function equation
-- multiple times

t = zero
t = zero
